--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,22 @@ box-sizing:border-box;
 *::before{
 box-sizing: inherit;
 }
+img{
+width:100%;
+}
 
 body{
 display:flex;
 /* flex-flow:row wrap; */
 height:100vh;
-background-color:rgba(0,0,0,0.95);
-box-shadow:5px 3px 4px rgba(0,0,0,0.8);
-padding:1rem;
 }
 .container{
 margin: auto;
-box-shadow: 10px 6px 15px 5px rgba(255,255,255),-10px -6px 15px rgba(255,255,255);
+/* box-shadow: 10px 6px 15px 5px rgba(255,255,255),-10px -6px 15px rgba(255,255,255); */
 padding:1rem;
+background:url('../images/under-construction.jpg') no-repeat center/contain #fff ;
+height:100%;
+width:100%;
 }
 p{
  color:#fff;
