--- a/dams-app/src/styles/Index.css
+++ b/dams-app/src/styles/Index.css
@@ -1,6 +1,5 @@
-/* RESET */
-@import url("https://fonts.googleapis.com/css2?family=Anta&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
+/* RESET :: GOOGLE FONTS*/
+@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /* GENERAL ELEMENTS STYLES */
 html {
   box-sizing: border-box;
@@ -46,6 +45,10 @@ h5,
 h6 {
   text-transform: capitalize;
   margin-bottom: 1.2rem;
+  font-family: "Inter", sans-serif;
+}
+p {
+  font-family: "Inter", sans-serif;
 }
 h2 {
   text-align: center;
@@ -61,10 +64,13 @@ h6 {
   font-size: 0.875rem;
   font-weight: 500;
   text-align: center;
+  color: #676767;
 }
 h5 {
-  font-weight: 500;
-  font-size: 0.95rem;
+  font-weight: 400;
+  font-size: 1rem;
+  text-align: center;
+  color: #747789;
 }
 
 /* FORM ELEMENT STYLING */
