--- a/dams-app/src/styles/Home.css
+++ b/dams-app/src/styles/Home.css
@@ -2,6 +2,9 @@
 .home-page {
   position: relative;
 }
+.home-page .home-white-bg {
+  background: #fff;
+}
 
 /* DESKTOP SCREEN */
 @media (min-width: 980px) {
