--- a/dams-app/src/styles/Index.css
+++ b/dams-app/src/styles/Index.css
@@ -1,5 +1,22 @@
 /* RESET :: GOOGLE FONTS*/
 @import url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+/* CuSTOME CSS IMPORT */
+@import url("AboutUs.css");
+@import url("Auth.css");
+@import url("Contactus.css");
+@import url("Home.css");
+@import url("Menu.css");
+@import url("NavBar.css");
+@import url("Products.css");
+@import url("HeroContents.css");
+@import url("Subscribe.css");
+@import url("StartYourJourney.css");
+@import url("Testimonials.css");
+@import url("SiteMetrics.css");
+@import url("SearchPage.css");
+@import url("Footer.css");
+@import url("Card.css");
 /* GENERAL ELEMENTS STYLES */
 html {
   box-sizing: border-box;
@@ -26,17 +43,25 @@ a {
   display: block;
   padding: 0.7rem;
   text-transform: capitalize;
+  color: #212121;
 }
 
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
   position: relative;
+  background: #f3f0eb;
 }
 section {
   padding: 1.5rem 5%;
+  /* border: 1px solid red; */
 }
-
+section:not(.subscribe-section, .footer-section, .nav-section) {
+  margin-bottom: 3.4rem;
+}
+.subscribe-section {
+  /* border: 1px solid green; */
+}
 h1,
 h2,
 h3,
@@ -49,6 +74,7 @@ h6 {
 }
 p {
   font-family: "Inter", sans-serif;
+  line-height: 1.8;
 }
 h2 {
   text-align: center;
@@ -72,13 +98,32 @@ h5 {
   text-align: center;
   color: #747789;
 }
+button {
+  padding: 0.8rem 1.2rem;
+  display: block;
+  background: #ef5533;
+  box-shadow: none;
+  border: none;
+  color: #fff;
+  border-radius: 30px;
+  text-transform: capitalize;
+  cursor: pointer;
+}
 
 /* FORM ELEMENT STYLING */
 form .form-field {
   position: relative;
   border-radius: 5px;
+  margin-bottom: 1.4rem;
 }
-form .form-field input {
+form .form-field label {
+  text-transform: capitalize;
+  margin-bottom: 0.45rem;
+  font-weight: 400;
+  display: block;
+}
+form .form-field input,
+form .form-field textarea {
   width: 100%;
   padding: 0.7rem;
   border-radius: 5px;
@@ -97,8 +142,9 @@ form .form-field input {
 
 /* FOR FLEXED ITEMS */
 .flex-container-2 > *,
-.flex-container-4 > * {
-  margin-bottom: 2rem;
+.flex-container-4 > *,
+.grid-container-3 > * {
+  margin-bottom: 2.4rem;
 }
 
 .see-more a {
@@ -138,6 +184,13 @@ form .form-field input {
   .flex-container-4 > *,
   .flex-container-2 > * {
     flex-basis: 48%;
+    margin-bottom: 0;
+  }
+  .grid-container-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .grid-container-3 > * {
     margin-bottom: 0;
   }
 }
