--- a/dams-app/src/styles/Products.css
+++ b/dams-app/src/styles/Products.css
@@ -1,4 +1,8 @@
 .product-section {
+  /* background: #fff; */
+}
+.product-section .card {
+  background: #fff;
 }
 .product-section .card:hover {
   box-shadow: 0px 54px 80px -16px rgba(219, 222, 229, 0.8);
