--- a/dams-app/src/styles/Testimonials.css
+++ b/dams-app/src/styles/Testimonials.css
@@ -1,6 +1,11 @@
 /* TESTIMONIALS STYLES */
+.testimonial-section {
+  background: #fff;
+  /* padding: 2.5rem 0rem; */
+}
 .flex-container-2 .testimonial-card {
   text-align: center;
+  box-shadow: 0px 16px 60px 0px #0000000f;
 }
 .flex-container-2 .testimonial-card .img-container {
   width: 100px;
