--- a/dams-app/src/styles/Index.css
+++ b/dams-app/src/styles/Index.css
@@ -171,10 +171,25 @@ form .form-field textarea {
 
 /* ICONS STYLES */
 .nav-icon {
-  width: 25.75px;
-  height: 25.75px;
+  width: 20.75px;
+  height: 20.75px;
   /* display: inline-block; */
   cursor: pointer;
+}
+.user-icon.active {
+  position: relative;
+}
+.user-icon.active::before {
+  content: "";
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  background-color: #228b22;
+  border-radius: 50%;
+  bottom: 3px;
+  right: -3px;
+  display: inline-block;
+  z-index: 1040;
 }
 
 /* FOR FLEXED ITEMS */
@@ -229,6 +244,10 @@ form .form-field textarea {
   }
   .grid-container-3 > * {
     margin-bottom: 0;
+  }
+  .nav-icon {
+    width: 25.75px;
+    height: 25.75px;
   }
 }
 
