--- a/dams-app/src/styles/Index.css
+++ b/dams-app/src/styles/Index.css
@@ -17,6 +17,8 @@
 @import url("SearchPage.css");
 @import url("Footer.css");
 @import url("Card.css");
+@import url("Cart.css");
+
 /* GENERAL ELEMENTS STYLES */
 html {
   box-sizing: border-box;
